# TrainAutoencoder

./: .gitignore  README.md  pyproject.toml
mlruns/0/: meta.yaml
mlruns/0/1b788cec11344189a09a7c8052fdf55e/: meta.yaml
mlruns/0/1b788cec11344189a09a7c8052fdf55e/tags/: mlflow.runName  mlflow.source.git.commit
mlruns/0/1c5397f7d93d4b0eae402ec2167f7ccf/: meta.yaml
mlruns/0/1c5397f7d93d4b0eae402ec2167f7ccf/tags/: mlflow.runName
mlruns/0/98a6f7fc4e00447e8f201b3c3087bd8f/: meta.yaml
mlruns/0/98a6f7fc4e00447e8f201b3c3087bd8f/tags/: mlflow.runName  mlflow.source.name
src/: test1.py  train.py
src/train/: test1.py  test_check_model_from_dagsh.py  train.py
src/train_and_valid_model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
