[build-system]
requires = ["setuptools>=40.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "train_and_valid_model"
version = "0.0.10"
authors = [
  { name="DZ" },
]

description = "package from train and validation"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "numpy>=1.26.4",
  "keras>=2.0.0",
  "tensorflow>=2.16.1",
  "scikit-learn>=1.4.1",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Dimitriy200/TrainAutoencoder"

[tool.hatch.build.targets.wheel]
packages = ["src/train"]