[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "train_and_valid_model"
version = "0.1.4"
authors = [
  { name="DZ" },
]

description = "package from train and validation"
readme = "README.md"
requires-python = ">=3.8.0"

dependencies = [
  "numpy>=1.22.1",
  "scikit-learn",
  "setuptools==57.5.0",
  "tensorflow==2.16.1",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Dimitriy200/TrainAutoencoder"

[tool.hatch.build.targets.wheel]
packages = ["src/train"]