[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "train_and_valid_model"
version = "0.2.15"
authors = [
  { name="DZ" },
]

description = "package from train and validation"
readme = "README.md"

requires-python = ">=3.10.0"

dependencies = [
  "tensorflow",
  "scikit-learn",
  "dagshub>=0.3.27",
  "setuptools==57.5.0",
  "mlflow",
  "h5py==3.11.0",
  "pydantic==2.7.4",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Dimitriy200/TrainAutoencoder"

[tool.hatch.build.targets.wheel]
packages = ["src/train"]